# Scipher

./: .gitignore  ARCHITECTURE.md  CONFIGS.md  pyproject.toml
notebooks/: cell_embedding_sanity_check.ipynb  evaluate.ipynb  evaluate_transformer.ipynb  preprocess_gene_embeddings.ipynb  train.ipynb  train_transformer.ipynb
scipher/: __init__.py
scipher/data/: gene_list.py  gene_mapping.py
scipher/embedders/: __init__.py  attention.py  gene_transformer.py  matrix_weight.py  projection.py  weighted_sum.py
scipher/embedders/gene_embeddings/: esm2.py  proteinbert.py
scipher/hierarchy/: __init__.py  cache_ontology.py  config.py  data_loader.py  load.py  loss.py  model.py  ontology_utils.py  paths.py  preprocess_ontology.py
scripts/: embed_genes.py  resume_training.py  run_preprocessing.py  train_transformer.py
